--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-TOKEN = "your_token"
-BOT_NAME = "Music Disc"
-PREFIX = "+"
+TOKEN = "MTEyMTc4Mjg5MzI4NzU4MzgyNA.G-_8w7.KqCa9LJz5IpM8W4oB37SbWkmtHvGd4ks5_gTrA"
+BOT_NAME = "Fly music"
+PREFIX = "F?"
 PLAYING = "+help | music"
 EMBEDS_COLOR = "#FFFFFF"
 DEFAULT_VOLUME = 50
